Fix: birthDateSex label textAlign center

--- a/src/components/signup/SignUpForm.module.scss
+++ b/src/components/signup/SignUpForm.module.scss
@@ -54,10 +54,12 @@
 
     label:nth-of-type(1) {
       grid-area: a;
+      text-align: center;
     }
 
     label:nth-of-type(2) {
       grid-area: b;
+      text-align: center;
     }
 
     select {
